IFS-2184 - Refactors CompetitionInvite, clearer naming and moves competition classes into a separate package.

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
@@ -148,7 +148,7 @@ include::competition.adoc[]
 
 [[competitioninvite]]
 == Competition Invite
-include::competitionInvite.adoc[]
+include::competitionAssessmentInvite.adoc[]
 
 [[competitionparticipant]]
 == Competition Participant
