IFS-2113 - Adds analytics rest service documentation.

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
@@ -109,6 +109,10 @@ include::affiliation.adoc[]
 == Alert
 include::alert.adoc[]
 
+[[analytics]]
+== Analytics
+include::analytics.adoc[]
+
 [[application]]
 == Application
 include::application.adoc[]
