Fixes broken asciidoc include

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
@@ -152,7 +152,7 @@ include::competition.adoc[]
 
 [[competitioninvite]]
 == Competition Invite
-include::competitionAssessmentInvite.adoc[]
+include::competitionInvite.adoc[]
 
 [[competitionparticipant]]
 == Competition Participant
