IFS-2164-Spike-Bank-Deets-Total
ASCII Docs.

Change-Id: I0ccddbfc0750a28e330e9b7f9a5b6f996c7cacf1

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/competition.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/competition.adoc
@@ -245,3 +245,15 @@ include::{snippets}/competition/count-pending-spend-profiles/http-response.adoc[
 
 ==== Curl Example
 include::{snippets}/competition/count-pending-spend-profiles/curl-request.adoc[]
+
+=== Get count of organisations for which Bank Details Approval is pending
+==== Request
+include::{snippets}/competitions/count-pending-bank-details-approvals/http-request.adoc[]
+
+==== Response
+include::{snippets}/competitions/count-pending-bank-details-approvals/http-response.adoc[]
+
+==== Curl Example
+include::{snippets}/competitions/count-pending-bank-details-approvals/curl-request.adoc[]
+
+
