IFS-1138 Updates for web and data tier, including tests

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/assessmentPanel.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/assessmentPanel.adoc
@@ -13,3 +13,15 @@ include::{snippets}/assessmentpanel/unassign-application/path-parameters.adoc[]
 
 ==== Curl Example
 include::{snippets}/assessmentpanel/unassign-application/curl-request.adoc[]
+
+=== Get assessment reviews for user and competition
+==== Request
+include::{snippets}/assessmentpanel/get-assessment-reviews/http-request.adoc[]
+include::{snippets}/assessmentpanel/get-assessment-reviews/path-parameters.adoc[]
+
+==== Response
+include::{snippets}/assessmentpanel/get-assessment-reviews/http-response.adoc[]
+include::{snippets}/assessmentpanel/get-assessment-reviews/response-fields.adoc[]
+
+==== Curl Example
+include::{snippets}/assessmentpanel/get-assessment-reviews/curl-request.adoc[]
