--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/project.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/project.adoc
@@ -711,6 +711,18 @@ include::{snippets}/project/grant-offer-letter/state/get-grant-offer-letter-work
 ===== Curl Example
 include::{snippets}/project/grant-offer-letter/state/get-grant-offer-letter-workflow-state/curl-request.adoc[]
 
+=== Get Grant Offer Letter State
+==== Success
+===== Request
+include::{snippets}/project/grant-offer-letter/current-state/get-grant-offer-letter-state/http-request.adoc[]
+include::{snippets}/project/grant-offer-letter/current-state/get-grant-offer-letter-state/path-parameters.adoc[]
+
+===== Response
+include::{snippets}/project/grant-offer-letter/current-state/get-grant-offer-letter-state/http-response.adoc[]
+
+===== Curl Example
+include::{snippets}/project/grant-offer-letter/current-state/get-grant-offer-letter-state/curl-request.adoc[]
+
 === Get Finance Check Eligibility
 ==== Success
 ===== Request
