IFS-2778 Added tests, docs and fixed issue with invited assessor list

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
@@ -190,6 +190,10 @@ include::assessmentPanel.adoc[]
 == Assessment Panel Invite
 include::assessmentReviewPanelInvite.adoc[]
 
+[[assessment]]
+== Interview Panel Invite
+include::assessmentInterviewPanelInvite.adoc[]
+
 [[user]]
 == User
 include::user.adoc[]
