--- a/jmeter/Representative/README
+++ b/jmeter/Representative/README
@@ -8,6 +8,7 @@ Where
 invite_user        = number of users to run the invite_user group
 applicant_users    = number of users to run the applicant_users group
 registration_users = number of users to run the registration_users group
+front_door_users   = number of users to run the front door group
 uat.properties     = file that contains properties on uat invariants. Currently:
                      server_url        = the url of the uat servers
                      authorisation_url = the url of the shibboleth authentication servers
