IFS-2533-GOL-Rejection-Reason
ASCII Docs.

Change-Id: I6fedb17d8c1edd6ab7fc4745ffbf1cd992d3e1d4

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/project-grant-offer.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/project-grant-offer.adoc
@@ -98,6 +98,7 @@ include::{snippets}/project/get-additional-contract-file-entry-details/curl-requ
 ==== Request
 include::{snippets}/project/approve-or-reject-signed-grant-offer-letter/http-request.adoc[]
 include::{snippets}/project/approve-or-reject-signed-grant-offer-letter/path-parameters.adoc[]
+include::{snippets}/project/approve-or-reject-signed-grant-offer-letter/request-fields.adoc[]
 
 ==== Response
 include::{snippets}/project/approve-or-reject-signed-grant-offer-letter/http-response.adoc[]
