--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
@@ -191,6 +191,10 @@ include::assessmentPanel.adoc[]
 include::assessmentReviewPanelInvite.adoc[]
 
 [[assessment]]
+== Interview Panel
+include::assessmentInterviewPanel.adoc[]
+
+[[assessment]]
 == Interview Panel Invite
 include::assessmentInterviewPanelInvite.adoc[]
 
