--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
@@ -188,7 +188,7 @@ include::assessmentPanel.adoc[]
 
 [[assessment]]
 == Assessment Panel Invite
-include::assessmentReviewPanelInvite.adoc[]
+include::assessment-panel-invite.adoc[]
 
 [[assessment]]
 == Interview Panel
