--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
@@ -192,7 +192,7 @@ include::assessment-panel-invite.adoc[]
 
 [[assessment]]
 == Interview Panel
-include::interviewPanel.adoc[]
+include::interview-panel.adoc[]
 
 [[assessment]]
 == Interview Panel Invite
