--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/project.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/project.adoc
@@ -53,6 +53,16 @@ include::{snippets}/project/update-start-date-but-date-in-past/http-response.ado
 ===== Project start date not on the first day of the month
 include::{snippets}/project/update-start-date-but-date-not-first-of-month/http-response.adoc[]
 
+=== Update project duration
+==== Request
+include::{snippets}/project/update-project-duration/http-request.adoc[]
+include::{snippets}/project/update-project-duration/path-parameters.adoc[]
+
+==== Response
+include::{snippets}/project/update-project-duration/http-response.adoc[]
+
+==== Curl Example
+include::{snippets}/project/update-project-duration/curl-request.adoc[]
 
 === Set Project Manager
 ==== Success case
