IFS-3155 view status tab

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/interview-panel.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/interview-panel.adoc
@@ -9,6 +9,18 @@ include::{snippets}/interview-panel/assign-application/http-response.adoc[]
 ==== Curl Example
 include::{snippets}/interview-panel/assign-application/curl-request.adoc[]
 
+=== View applications assigned to an interview panel
+==== Request
+include::{snippets}/interview-panel/get-assigned-applications/http-request.adoc[]
+include::{snippets}/interview-panel/get-assigned-applications/path-parameters.adoc[]
+
+==== Response
+include::{snippets}/interview-panel/get-assigned-applications/http-response.adoc[]
+include::{snippets}/interview-panel/get-assigned-applications/response-fields.adoc[]
+
+==== Curl Example
+include::{snippets}/interview-panel/get-assigned-applications/curl-request.adoc[]
+
 === Get available applications for interview panel
 ==== Request
 include::{snippets}/interview-panel/get-available-applications/http-request.adoc[]
