--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/interview-panel.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/interview-panel.adoc
@@ -33,7 +33,7 @@ include::{snippets}/interview-panel/get-available-application-ids/response-field
 ==== Curl Example
 include::{snippets}/interview-panel/get-available-application-ids/curl-request.adoc[]
 
-=== Get stages application
+=== Get staged applications
 ==== Request
 include::{snippets}/interview-panel/get-staged-applications/http-request.adoc[]
 include::{snippets}/interview-panel/get-staged-applications/path-parameters.adoc[]
@@ -44,3 +44,15 @@ include::{snippets}/interview-panel/get-staged-applications/response-fields.adoc
 
 ==== Curl Example
 include::{snippets}/interview-panel/get-staged-applications/curl-request.adoc[]
+
+=== Get key statistics
+==== Request
+include::{snippets}/interview-panel/get-key-statistics/http-request.adoc[]
+include::{snippets}/interview-panel/get-key-statistics/path-parameters.adoc[]
+
+==== Response
+include::{snippets}/interview-panel/get-key-statistics/http-response.adoc[]
+include::{snippets}/interview-panel/get-key-statistics/response-fields.adoc[]
+
+==== Curl Example
+include::{snippets}/interview-panel/get-key-statistics/curl-request.adoc[]
