--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/application.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/application.adoc
@@ -137,3 +137,19 @@ include::{snippets}/application/show-application-team/http-response.adoc[]
 
 ==== Curl Example
 include::{snippets}/application/show-application-team/curl-request.adoc[]
+
+=== Get latest email funding date
+==== Request
+include::{snippets}/application/get-latest-email-funding-date/http-request.adoc[]
+include::{snippets}/application/get-latest-email-funding-date/request-parameters.adoc[]
+
+==== Response
+include::{snippets}/application/get-latest-email-funding-date/http-response.adoc[]
+
+==== Curl Example
+include::{snippets}/application/get-latest-email-funding-date/curl-request.adoc[]
+
+
+
+
+
