IFS-3279 Updating tests.

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
@@ -166,6 +166,10 @@ include::competitionSetupQuestion.adoc[]
 == Competition Setup Finance
 include::competitionSetupFinance.adoc[]
 
+[[costTotals]]
+== Cost Totals
+include::costTotals.adoc[]
+
 [[inviteorganisation]]
 == Invite Organisation
 include::invite-organisation.adoc[]
