IFS-2930 Minor fixes.

--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/ifs.adoc
@@ -168,7 +168,7 @@ include::competitionSetupFinance.adoc[]
 
 [[costTotals]]
 == Cost Totals
-include::costTotals.adoc[]
+include::cost-totals.adoc[]
 
 [[inviteorganisation]]
 == Invite Organisation
