--- a/ifs-data-layer/ifs-data-service/src/docs/asciidoc/interview-panel.adoc
+++ b/ifs-data-layer/ifs-data-service/src/docs/asciidoc/interview-panel.adoc
@@ -78,3 +78,14 @@ include::{snippets}/interview-panel/unstage-applications/http-response.adoc[]
 
 ==== Curl Example
 include::{snippets}/interview-panel/unstage-applications/curl-request.adoc[]
+
+=== Is application assigned
+==== Request
+include::{snippets}/interview-panel/is-application-assigned/http-request.adoc[]
+include::{snippets}/interview-panel/is-application-assigned/path-parameters.adoc[]
+
+==== Response
+include::{snippets}/interview-panel/unstage-applications/http-response.adoc[]
+
+==== Curl Example
+include::{snippets}/interview-panel/unstage-applications/curl-request.adoc[]
